[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Rooms/VaultDoor.gd" type="Script" id=1]
[ext_resource path="res://assets/art/objects/vault_door_coin.png" type="Texture" id=2]
[ext_resource path="res://assets/art/bgs/vault_door_closed_powered.png" type="Texture" id=3]
[ext_resource path="res://assets/art/bgs/vault_door_open.png" type="Texture" id=4]
[ext_resource path="res://assets/art/bgs/vault_door_closed_unpowered.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/back.png" type="Texture" id=6]
[ext_resource path="res://scenes/Inventory/Flashlight.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 71.9161, 72.003 )

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 24 )

[node name="VaultDoor" type="Node2D"]
script = ExtResource( 1 )

[node name="background_closed" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="background_powered" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
centered = false

[node name="background_open" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="screen" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="screen"]
position = Vector2( 81.4251, 192.884 )
shape = SubResource( 1 )

[node name="to_vault" type="Area2D" parent="."]
position = Vector2( 319.694, 201.56 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="to_vault"]
position = Vector2( 2, 0 )
scale = Vector2( 8.85784, 8.85784 )
shape = SubResource( 2 )

[node name="coin" type="Area2D" parent="."]
position = Vector2( 126.81, 126.142 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="coin"]
texture = ExtResource( 2 )

[node name="back" type="Area2D" parent="."]
position = Vector2( 616, 336 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="back"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="back"]
texture = ExtResource( 6 )

[node name="Flashlight" parent="." instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0.823529 )
[connection signal="input_event" from="screen" to="." method="_on_screen_input_event"]
[connection signal="input_event" from="to_vault" to="." method="_on_to_vault_input_event"]
[connection signal="input_event" from="coin" to="." method="_on_coin_input_event"]
[connection signal="input_event" from="back" to="." method="_on_back_input_event"]
